--- a/vmidentity/config/catalina.properties
+++ b/vmidentity/config/catalina.properties
@@ -31,7 +31,7 @@ package.access=sun.,org.apache.catalina.,org.apache.coyote.,org.apache.tomcat.,o
 # by default, no packages are restricted for definition, and none of
 # the class loaders supplied with the JDK call checkPackageDefinition.
 #
-package.definition=sun.,java.,org.apache.catalina.,org.apache.coyote.,org.apache.tomcat.,org.apache.jasper.
+package.definition=sun.,java.,org.apache.catalina.,org.apache.coyote.,org.apache.tomcat.,org.apache.naming.,org.apache.jasper.
 
 #
 #
@@ -86,8 +86,8 @@ tomcat.util.buf.StringCache.byte.enabled=true
 #abort if there is an error during initialization
 org.apache.catalina.startup.EXIT_ON_INIT_FAILURE=true
 
-org.apache.tomcat.util.digester.PROPERTY_SOURCE=com.springsource.tcserver.security.PropertyDecoder
-com.springsource.tcserver.security.PropertyDecoder.passphrase=springsource
+#org.apache.tomcat.util.digester.PROPERTY_SOURCE=com.springsource.tcserver.security.PropertyDecoder
+#com.springsource.tcserver.security.PropertyDecoder.passphrase=springsource
 # List of JAR files that should not be scanned for configuration information
 # such as web fragments, TLD files etc. It must be a comma separated list of
 # JAR file names.
@@ -100,7 +100,7 @@ com.springsource.tcserver.security.PropertyDecoder.passphrase=springsource
 # - Common non-Tomcat JARs
 # - Sun JDK JARs
 # - Apple JDK JARs
-tomcat.util.scan.DefaultJarScanner.jarsToSkip=\
+tomcat.util.scan.StandardJarScanFilter.jarsToSkip=\
 annotations-api.jar,\
 ant.jar,\
 apple_provider.jar,\
