PR1839885 - remove deprecated SCW feature
Change-Id: I54846249a458a6030ca3dca7a4f1c382e94b2973

--- a/vmdir/server/replication/Makefile.am
+++ b/vmdir/server/replication/Makefile.am
@@ -5,8 +5,7 @@ libreplication_la_SOURCES = \
     libmain.c \
     firstreplcycle.c \
     replentry.c \
-    thread.c \
-    urgentreplthread.c
+    thread.c
 
 libreplication_la_CPPFLAGS = \
     -I$(top_srcdir)/include \
