VmDir: add schema replication status check capability
Change-Id: If5276d968c5ba95d7c16019bb79577ea1972c3fe

--- a/vmdir/common/win/libcommon.vcproj
+++ b/vmdir/common/win/libcommon.vcproj
@@ -258,6 +258,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\replstate\schemareplstate.c"
+				>
+			</File>
+			<File
 				RelativePath="..\schema\compat.c"
 				>
 			</File>
