--- a/vmdir/common/Makefile.am
+++ b/vmdir/common/Makefile.am
@@ -34,6 +34,7 @@ libcommon_la_SOURCES = \
     threading.c  \
     tsstack.c \
     util.c \
+    replstate/schemareplstate.c \
     schema/compat.c \
     schema/copy.c \
     schema/def.c \
