--- a/vmafd/interop/java/cdc/pom.xml
+++ b/vmafd/interop/java/cdc/pom.xml
@@ -4,5 +4,5 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.vmware.identity</groupId>
   <artifactId>client-domain-controller-cache</artifactId>
-  <version>6.6.0</version>
+  <version>1.2.0-SNAPSHOT</version>
 </project>
