Brandpolicy settings and IDM service files deletion [PR:1842676]
Change-Id: Iadfc6e684d40992ed9a0eaaddda6d8a219c8aede

--- a/vmidentity/config/vmware-stsd.service.in
+++ b/vmidentity/config/vmware-stsd.service.in
@@ -1,7 +1,7 @@
 [Unit]
 Description=VMware Secure Token Service
-After=syslog.target network.target vmware-idmd.service
-Requires=vmware-idmd.service
+After=syslog.target network.target lwsmd.service
+Requires=lwsmd.service
 
 [Service]
 Type=forking
