update syslog configuration
This change updates the syslog-ng config files to improve
format. Also the support bundle script archives journal files.

Change-Id: I1305bcc3791799ee64380b2631c2c4110e4ef795

--- a/vmafd/config/vmafdd-syslog-ng.conf
+++ b/vmafd/config/vmafdd-syslog-ng.conf
@@ -1,4 +1,5 @@
-destination d_vmafdd{ file("/var/log/lightwave/vmafdd.log"); };
+template t_vmafdd_template { template("${STAMP} ${HOST} ${PRIORITY} ${PROGRAM}[${PID}]: ${MSG}\n"); };
+destination d_vmafdd{ file("/var/log/lightwave/vmafdd.log" template(t_vmafdd_template)); };
 filter f_vmafdd { program("vmafdd"); };
 log { source(s_local); filter(f_vmafdd); destination(d_vmafdd); };
 options { frac_digits(3); };
