--- a/vmca/config/vmcad-syslog-ng.conf
+++ b/vmca/config/vmcad-syslog-ng.conf
@@ -1,4 +1,5 @@
-destination d_vmcad{ file("/var/log/lightwave/vmcad.log"); };
+template t_vmcad_template { template("${STAMP} ${HOST} ${PRIORITY} ${PROGRAM}[${PID}]: ${MSG}\n"); };
+destination d_vmcad{ file("/var/log/lightwave/vmcad.log" template(t_vmcad_template)); };
 filter f_vmcad{ program("vmcad"); };
 log { source(s_local); filter(f_vmcad); destination(d_vmcad); };
 options { frac_digits(3); };
