--- a/vmdir/config/vmdird-syslog-ng.conf
+++ b/vmdir/config/vmdird-syslog-ng.conf
@@ -1,4 +1,5 @@
-destination d_vmdird { file("/var/log/lightwave/vmdird.log"); };
+template t_vmdird_template { template("${STAMP} ${HOST} ${PRIORITY} ${PROGRAM}[${PID}]: ${MSG}\n"); };
+destination d_vmdird { file("/var/log/lightwave/vmdird.log" template(t_vmdird_template)); };
 filter f_vmdird { program("vmdird"); };
 log { source(s_local); filter(f_vmdird); destination(d_vmdird); };
 options { frac_digits(3); };
