--- a/vmdns/config/vmdnsd-syslog-ng.conf
+++ b/vmdns/config/vmdnsd-syslog-ng.conf
@@ -1,4 +1,5 @@
-destination d_vmdnsd{ file("/var/log/lightwave/vmdnsd.log"); };
+template t_vmdnsd_template { template("${STAMP} ${HOST} ${PRIORITY} ${PROGRAM}[${PID}]: ${MSG}\n"); };
+destination d_vmdnsd{ file("/var/log/lightwave/vmdnsd.log" template(t_vmdnsd_template)); };
 filter f_vmdnsd{ program("vmdnsd"); };
 log { source(s_local); filter(f_vmdnsd); destination(d_vmdnsd); };
 options { frac_digits(3); };
