oidc c client lib - move code common to id_token and access_token to a new file (and struct) to eliminate duplication. also add GetTenant and GetTokenType.
Change-Id: I0a6e4b4d173521009ec105f73d8877dae9a5e154

--- a/vmidentity/ssoclients/oidc/src/Makefile.am
+++ b/vmidentity/ssoclients/oidc/src/Makefile.am
@@ -3,6 +3,7 @@ lib_LTLIBRARIES = libssooidc.la
 libssooidc_la_SOURCES = \
     oidc_client.c \
     oidc_server_metadata.c \
+    oidc_token.c \
     oidc_id_token.c \
     oidc_access_token.c \
     oidc_token_success_response.c \
