When we update the group membership of a deleted user perform the operation as 'internal' so access checks aren't applied.
Change-Id: I92929dde6916b7355e46819337c170bb0c175d8d

--- a/vmdir/testing/integration_tests/misc/Makefile.am
+++ b/vmdir/testing/integration_tests/misc/Makefile.am
@@ -10,6 +10,7 @@ libmisctests_la_CPPFLAGS = \
 libmisctests_la_SOURCES = \
     main.c \
     dcaccount.c \
+    groupmembership.c \
     tombstone.c
 
 libmisctests_la_LIBADD = \
