oidc - disable OIDCClientGssIT integration test class which needs AD integration to work.
Change-Id: I71ca99f1403754cb6e6d3313484bf556b2d43e51

--- a/vmidentity/openidconnect/client/pom.xml
+++ b/vmidentity/openidconnect/client/pom.xml
@@ -12,6 +12,21 @@
   <packaging>jar</packaging>
   <name>OpenID Connect - Client</name>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${maven.failsafe.plugin.version}</version>
+        <configuration>
+          <excludes>
+            <exclude>**/OIDCClientGssIT.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <!-- VMware Dependencies -->
     <dependency>
