publish lwraftschema tool
Change-Id: Icd3945de283187d46f6a48710fbc7608043fa68f

--- a/lwraft/configure.ac
+++ b/lwraft/configure.ac
@@ -670,6 +670,7 @@ AC_CONFIG_FILES([Makefile
                  tools/lwraftpromo/Makefile
                  tools/vdcadmintool/Makefile
                  tools/vdcleavefed/Makefile
+                 tools/vdcschema/Makefile
                  tools/test/Makefile
                  tools/test/circularbuffer/Makefile
                  tools/test/dequetest/Makefile
