--- a/vmdir/configure.ac
+++ b/vmdir/configure.ac
@@ -681,6 +681,7 @@ AC_CONFIG_FILES([Makefile
                  tools/Makefile
                  tools/vdcaclmgr/Makefile
                  tools/vdcadmintool/Makefile
+                 tools/vdcpromo/Makefile
                  tools/vdcpass/Makefile
                  tools/vdcrepadmin/Makefile
                  tools/vdcsetupldu/Makefile
