work-in-progress changes for lightwave build revamp
work-in-progress changes for lightwave build revamp

Change-Id: Ib8bbc32a0e378c42aff743b8a1d5d14e89c1330a

--- a/lwraft/common/Makefile.am
+++ b/lwraft/common/Makefile.am
@@ -59,6 +59,7 @@ libcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/thirdparty/heimdal \
     -I$(top_srcdir)/thirdparty/heimdal/krb5-crypto \
     -I$(top_srcdir)/thirdparty/heimdal/asn1 \
+    -DLDAP_DEPRECATED \
     @OPENSSL_INCLUDES@ \
     @LW_INCLUDES@
 
