--- a/vmevent/Makefile.am
+++ b/vmevent/Makefile.am
@@ -2,3 +2,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = \
     include
+
+stage: all
+	echo "=================  VMEVENT STAGE TARGET ===================="
+	touch /tmp/VMEVENT_STAGE_TARGET
