--- a/vmidentity/configure.ac
+++ b/vmidentity/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ(2.59)
 
 AC_INIT([vmsts], [6.0.0], [support@vmware.com])
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
 AC_CONFIG_HEADERS([include/config.h])
 AC_CONFIG_MACRO_DIR([m4])
 m4_pattern_allow([AM_PROG_AR])
