--- a/Makefile.am
+++ b/Makefile.am
@@ -7,19 +7,12 @@
 #        vmca \
 #        vmidentity
 
-#SRCROOT := .
-#MAKEROOT=$(SRCROOT)/support/make
-#include $(MAKEROOT)/makedefs.mk
+subdirs = vmevent vmdir vmdns vmafd vmca config
+destdir = "/home/brownj/workspaces/git/pslabs/lightwave/stage"
 
-stage: all-recursive
-	echo "STAGE TARGET HELLO WORLD"
-	touch /tmp/STAGE_TARGET_HELLO_WORLD
+$(subdirs):
+	make $(AM_MAKEFLAGS) DESTDIR=$(destdir) install -C $@
 
-all: 
-	@cd ./vmevent    && make $(AM_FLAGS) DESTDIR=/home/brownj/workspaces/git/pslabs/lightwave/stage install
-	@cd ./vmdir      && make $(AM_FLAGS) DESTDIR=/home/brownj/workspaces/git/pslabs/lightwave/stage install
-	@cd ./vmdns      && make $(AM_FLAGS) DESTDIR=/home/brownj/workspaces/git/pslabs/lightwave/stage install
-	@cd ./vmafd      && make $(AM_FLAGS) DESTDIR=/home/brownj/workspaces/git/pslabs/lightwave/stage install
-	@cd ./vmca       && make $(AM_FLAGS) DESTDIR=/home/brownj/workspaces/git/pslabs/lightwave/stage install
-	@cd ./vmidentity && make $(AM_FLAGS) DESTDIR=/home/brownj/workspaces/git/pslabs/lightwave/stage install
-	@cd ./config     && make $(AM_FLAGS) DESTDIR=/home/brownj/workspaces/git/pslabs/lightwave/stage install
+.PHONY: $(subdirs)
+
+all: $(subdirs)
