Fix for deadlock while purging the cache
Change-Id: Ic562084018879a57426eb382d5775c61b0a501ec

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,57 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/macos,windows,linux
+
+*.tar.gz
+*.dsc
+*.deb
+/git.spec
+*.exe
+*.[aos]
+*.py[co]
+.depend/
+*.gcda
+*.gcno
+*.gcov
+/coverage-untested-functions
+/cover_db/
+/cover_db_html/
+*+
+/config.mak
+/autom4te.cache
+/config.cache
+/config.log
+/config.status
+/config.mak.autogen
+/config.mak.append
+/configure
+/tags
+/TAGS
+/cscope*
+*.obj
+*.o
+*.lo
+*.la
+*.lai
+*.so
+*.so.0
+*.so.0.0
+*.so.0.0.0
+*.Plo
+*.Po
+*_h.h
+*_cstub.c
+*_sstub.c
+*.class
+*.jar
+*.lib
+*.res
+*.sln
+*.suo
+*.ncb
+*.vcproj
+*.user
+*.idb
+*.pdb
+/Debug/
+/Release/
