--- a/vmafd/jdepends/Makefile.am
+++ b/vmafd/jdepends/Makefile.am
@@ -3,5 +3,4 @@ CLASSPATH=@TOOLS_CLASSPATH@:@ANT_CLASSPATH@
 
 install-exec-local:
 	@echo "Downloading dependencies for Vmware Authentication Framework"
-	cd @top_srcdir@/jdepends && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
-
+	cd @top_srcdir@/jdepends && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" -Dbuild_dir="@abs_top_builddir@" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
