--- a/vmafd/jdepends/build.xml
+++ b/vmafd/jdepends/build.xml
@@ -5,9 +5,9 @@
 <project name="vmware-vmafd-depends" default="build" basedir=".">
 
    <property name="MAINSRCROOT" value="${basedir}/.." />
-   <property file="../product.properties" />
-   <property name="buildRoot" value="${MAINSRCROOT}/build/${PRODUCT_NAME}" />
-   <property name="depends" value="${MAINSRCROOT}/build/depends" />
+   <property file="${MAINSRCROOT}/java/product.properties" />
+   <property name="buildRoot" value="${build_dir}/${PRODUCT_NAME}" />
+   <property name="depends" value="${build_dir}/depends" />
 
    <import file="${MAINSRCROOT}/build/ant/presets.xml" />
    <import file="${MAINSRCROOT}/build/ant/defaults.xml" />
