PR 1850965 - vmdir integrity check feature https://confluence.eng.vmware.com/display/LIG/VmDir+Cluster+Integrity+Checking
add recheck capability

Change-Id: I10f1f3181c2bbb12dcc17972355388686e4d98e2

--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -10,6 +10,7 @@ vmdird_SOURCES = \
     index.c \
     init.c \
     instance.c \
+    integritychk.c \
     ipcserver.c \
     ipclocalapi.c \
     ipcapihandler.c \
